# skills-bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
dashboard/: app.py
data/: runs.public.db
skills/: .gitkeep
src/bench/: __init__.py  agent.py  datasets.py  hub_client.py  run.py  scoring.py
