[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-bench"
version = "0.1.0"
description = "Benchmark (model × Probabl skills) agents on data-science use cases"
requires-python = ">=3.11"
dependencies = [
    "skore[hub]>=0.15",
    "scikit-learn>=1.4",
    "skrub>=0.5",
    "pandas>=2.0",
    "litellm>=1.50",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "plotly>=5.20",
]

[tool.setuptools.packages.find]
where = ["src"]
